[package]
name = "rs-row3"
version = "0.1.0"
authors = ["Alexey Golubev <dr.freecx@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
backtrace = "*"
sdl2 = "*"
rand = "0.6"

[profile.release]
debug = false
opt-level = 3
rpath = false
lto = true
debug-assertions = false
overflow-checks = false